# logic-moon-factory

./: README.md  proposal.md  pyproject.toml
.mplconfig/: fontlist-v390.json
experiments/: report.md
experiments/results/: generalization_metrics.csv  metrics.csv  online_metrics.csv  randomized_rl_training_logs.csv  randomized_rl_training_logs_dqn_randomized.csv  randomized_rl_training_logs_dqn_randomized_s2.csv  randomized_rl_training_logs_ppo_randomized.csv  rl_training_logs.csv  scale_up_metrics.csv  scale_up_summary.csv
experiments/results/rl_logs_parts/: general_dqn_randomized.csv  general_ppo_randomized.csv
lunar_path/: __init__.py  environment.py  generalization.py  metrics.py  online.py  report.py  scale_up.py  scenarios.py  visualization.py
lunar_path/methods/: __init__.py  astar.py  bfs.py  deep_rl.py  dfs.py  greedy.py  random_planner.py
scripts/: run_lunar_path_experiments.py  run_scale_up_experiment.py  train_general_rl_model.py  train_rl_group.py  train_rl_model_single.py  train_rl_models_parallel.py
